# rd-search-backend

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.note  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: test_pkg.yml
api/src/: app.py  process.py  test_search_components.py
api/src/fixtures/: dummyanswers.json
api/src/lib/: __init__.py  aws.py  bedrockqueryservice.py  hybridqueryservice.py  opensearchpipeline.py  read_data_functions.py  s3client.py  services.py
datapipeline/: process.py  rag_question_answer.py  search.py
datapipeline/experimentation/: data_reading.ipynb  demo_rag.ipynb  demo_search.ipynb
datapipeline/utils/: pipeline_functions.py  read_data_functions.py
deployments/templates/: api-deployment.yml  frontend-deployment.yml  frontend-service.yml  ingress.yml
docker/: Dockerfile-api  Dockerfile-frontend
frontend/: Dockerfile
frontend/src/: app.py
frontend/src/lib/: interaction.py  services.py
frontend/src/lib/routes/: __init__.py  feedback.py  index.py
frontend/src/static/css/: styles.css
frontend/src/templates/: feedback.html  layout.html
notebooks/: demo_search.ipynb  prep_data.py  test_index_add_delete.ipynb  test_search.ipynb
scripts/: config.py  process.py  read_data_functions.py  search_formatting_functions.py  services.py  test_search_components.py  upload_zip_to_s3.py
scripts/localstack/init/: localstack_init.sh
scripts/localstack/wait/: healthcheck.sh
search_backend/: aws.py  config.py  indexing_pipeline.py  read_data_functions.py  retrieval_pipeline.py  s3client.py  search.py  search_formatting_functions.py  services.py  threshold_score.py
search_backend/api/: Dockerfile  app.py  process.py  test_search_components.py
search_backend/api/lib/: bedrockqueryservice.py  config.py  dummyqueryservice.py  hybridqueryservice.py  indexing_functions.py  indexing_pipeline.py  opensearchpipeline.py  read_data_functions.py  retrieval_pipeline.py  retrievalservice.py  search_formatting_functions.py  searchfunctions.py  searchservice.py  services.py  test_search.ipynb
search_backend/api/src/: app.py  process.py  test_search_components.py
search_backend/api/src/lib/: bedrockqueryservice.py  hybridqueryservice.py  read_data_functions.py  searchfunctions.py  services.py
search_backend/datapipeline/: process.py  rag_question_answer.py  search.py
search_backend/datapipeline/experimentation/: check_query_cleaning.ipynb
search_backend/datapipeline/utils/: pipeline_functions.py  read_data_functions.py  search_functions.py
search_backend/deployments/templates/: api-service.yml  ingress.yml
search_backend/frontend/: app.py
search_backend/frontend/lib/: interaction.py  services.py
search_backend/frontend/lib/routes/: __init__.py  feedback.py  index.py
search_backend/frontend/src/: app.py
search_backend/frontend/src/lib/: apiclient.py  interaction.py  services.py
search_backend/frontend/src/lib/routes/: __init__.py  feedback.py  index.py
search_backend/frontend/src/templates/: index.html
search_backend/scripts/: upload_zip_to_s3.py
tests/: aws_test.py  indexing_pipeline_test.py  retrieval_pipeline_test.py  search_test.py  threshold_score_test.py
tests/api/lib/: indexing_pipeline_test.py
tests/data/: demo_data.json
