[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
only-include = ["search_backend"]
exclude = [
  "/.github",
  "htmlcov",
  ".coverage",
  "coverage.xml",
]
[tool.hatch.build.targets.wheel]
packages = ["./search_backend"]
[project]
name = "search_backend"
version = "0.0.1"
requires-python = ">=3.9, <4"
description = "Modular component for AI-enabled application search backend."
readme = "README.md"
authors = [
    { name="Elliot Smith", email="elliot.smith@digital.justice.gov.uk" },
    { name="Chloe Pugh", email="chloe.pugh@digital.justice.gov.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = [
]

[project.optional-dependencies]
# Add your optional dependencies here
dev = [
    "pip-tools",
    "ipykernel==6.29.5",
    "openpyxl==3.1.5",
    "pip-chill==1.0.3",
    "hatchling",
]
frontend = [
    "flask>=3.0.3, <4",
    "requests>=2.32.3, <3",
]
api = [
    "flask>=3.0.3, <4",
    "boto3",
    "opensearch-py",
    "opensearch-haystack",
    "haystack-ai",
    "fastembed-haystack",
    "amazon-bedrock-haystack",
    "accelerate"
]
datapipeline = [
   "accelerate==0.33.0",
   "amazon-bedrock-haystack==0.9.3",
   "config==0.5.1",
   "fastembed-haystack==1.2.0",
   "h2==4.1.0",
   "opensearch-haystack>=0.9.0, <1",
   "pdfminer.six==20240706",
   "python-docx==1.1.2",
   "python-pptx==0.6.23",
   "qdrant-haystack==4.1.2",
   "s3fs==2024.6.1",
   "sentence-transformers==3.0.1",
]
[project.urls]
Repository = "https://github.com/ministryofjustice/rd-search-backend"
"Bug tracker" = "https://github.com/ministryofjustice/rd-search-backend/issues"
# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]
omit = ["**/__init__.py"]
[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
