[project.urls]
Repository = "https://github.com/ministryofjustice/rd-search-backend"
"Bug tracker" = "https://github.com/ministryofjustice/rd-search-backend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["search_backend"]
exclude = [
  "/.github",
  "htmlcov",
  ".coverage",
  "coverage.xml",
]

[tool.hatch.build.targets.wheel]
packages = ["./search_backend"]

[project]
name = "search_backend"
version = "0.0.1"
requires-python = ">=3.9, <4"
description = "Modular component for AI-enabled application search backend."
readme = "README.md"
authors = [
    { name="Elliot Smith", email="elliot.smith2@justice.gov.uk" },
    { name="Chloe Pugh", email="chloe.pugh@digital.justice.gov.uk" },
    { name="Richard Leyshon", email="richard.leyshon@justice.gov.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = [
    "flask>=3.0.3, <4",
    "opensearch-py",
    "haystack-ai>=2.6.1, <3",
    "requests>=2.32.3, <3",
    "accelerate>=0.33.0, <1",
    "config>=0.5.1, <1",
    "fastembed-haystack>=1.2.0, <2",
    "h2>=4.1.0, <5",
    "opensearch-haystack>=1.0.0, <2",
    "sentence-transformers>=3.0.1, <4",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "ipykernel==6.29.5",
    "openpyxl==3.1.5",
    "pip-chill==1.0.3",
    "hatchling",
]
data_read = [
    "boto3",
    "s3fs==2024.6.1",
    "pdfminer.six==20240706",
    "python-docx>=1.1.2, <2",
    "python-pptx>=0.6.23, <1",
]
bedrock = [
    "amazon-bedrock-haystack>=0.9.3, <1",
]

[tool.coverage.run]
source = [
    "./src"
]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]

